# AI-Subtitle-Translator

./: .env.sample  .gitignore  README.md  README_cn.md  main.py  prompts.py  pyproject.toml
